log
Wed 27 Mar 2024 03:02:39 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
abebc8c
Wed 27 Mar 2024 03:05:09 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
6cba688
Wed 27 Mar 2024 03:10:44 AM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
78f32bf
Wed 27 Mar 2024 03:12:39 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
885d965
Wed 27 Mar 2024 03:15:12 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:72:62: error: ‘prev’ undeclared (first use in this function)
   72 |   if (list == NULL || list->current == NULL || list->current-prev == NULL)
      |                                                              ^~~~
list.c:72:62: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c94ab6b
Wed 27 Mar 2024 03:15:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f298b49
Wed 27 Mar 2024 03:18:39 AM UTC: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0ec02df
Wed 27 Mar 2024 03:24:03 AM UTC: 
 list.c | 29 +++++++++++++++++++++++++++--
 1 file changed, 27 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
6d38371
Wed 27 Mar 2024 03:30:50 AM UTC: 
 list.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
 tests:  12|0
total_score: 70/70
f5bae39
